<resources>
    <string name="app_name">Borum Jot</string>

    <!-- Prompts -->

    <!-- Strings related to login/register -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_pass">Confirm Password</string>

    <!-- String related to Jottings -->
    <string name="prompt_task_delete">Delete Task</string>
    <string name="prompt_note_delete">Delete Note</string>
    <string name="prompt_task_complete">Complete</string>
    <string name="prompt_details_fill">Enter the task\'s details</string>

    <!-- Strings related to Options -->
    <string name="prompt_share">Enter the email of Borum account</string>

    <!-- Actions -->

    <!-- Actions related to login/register -->
    <string name="action_register">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="action_home">Home</string>

    <!-- Actions related to Jottings -->
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>

    <!-- Actions related to Options -->
    <string name="action_report_bug">Report Bug</string>
    <string name="action_donate">Donate</string>
    <string name="action_forum">Forum</string>
    <string name="action_manage_account">Manage Account</string>
    <string name="action_export_data">Export Data</string>
    <string name="action_logout">Log Out</string>

    <!-- Actions related to Labels -->
    <string name="action_delete_label">Delete Label</string>

    <!-- General action strings -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Labels -->
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="borum_borumjot_affiliation">Your Borum Jot account is your Borum account</string>
    <string name="register_for_borum">Register for Borum</string>

    <!-- Titles -->
    <string name="default_menu_title">Default Menu</string>
    <string name="options_link_title">Options</string>
    <string name="support_link_title">Help &amp; Feedback</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="notes_title">Notes</string>
    <string name="tasks_title">Tasks</string>
    <string name="task_title">Task Name</string>
    <string name="search_title">Search</string>
    <string name="contact_title">Contact Me</string>
    <string name="cherry_rasbora_title">Cherry Rasbora</string>
    <string name="golden_toad_title">Golden Toad</string>

    <!-- Hints -->
    <string name="note_hint">Enter note here</string>
    <string name="search_hint">Search Jottings</string>

    <!-- Content Descriptions -->
    <string name="rating_contentdesc">Yellow star button</string>
    <string name="call_contentdesc">Call button</string>

    <string name="privacy_policy_confirmation">I have read and agree to the Privacy Policy</string>
    <string name="sms_contentdesc" />
    <string name="prompt_use_as_guest">Use as Guest</string>
    <string name="my_jottings_title">My Jottings</string>
    <string name="action_pin">Pin</string>
    <string name="action_close">Close</string>
    <string name="pin_content_desc">A pin icon</string>
    <string name="action_new_label">Create New Label</string>
    <string name="forum_link">http://meta.borumtech.com/Topics/Borum-Jot</string>
    <string name="all_borum_products_msg">Changes will affect your sign in across all Borum products</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="new_task_content_desc">\"Plus\" floating action button</string>
    <string name="action_due_date">Due Date</string>
    <string name="no_due_date">No Due Date</string>
    <string name="transition_jot_preview">openjot</string>
    <string name="delete_content_desc">Trashcan or delete icon</string>
    <string name="save_content_desc">Save icon</string>
    <string name="action_help">Help</string>
    <string name="version_name">Version 2.7.0</string>
    <string name="action_labels">Labels</string>
    <string name="copyright_notice">Copyright 2021 Varun Singh</string>
    <string name="support_email">support@borumtech.com</string>
    <string name="privacy_policy_link">https://jot.borumtech.com/legal/PrivacyPolicy</string>
    <string name="twitter_title">Follow @BorumJot</string>
    <string name="twitter_link">https://twitter.com/BorumJot</string>
    <string name="product_hunt_link">https://www.producthunt.com/posts/borum-jot</string>
    <string name="product_hunt_title">Give Feedback</string>
    <string name="product_hunt_content_desc">Product Hunt Logo</string>
    <string name="loading_note">Loading Note…</string>
    <string name="delete_subtask_content_desc">Red X</string>
    <string name="new_label_content_desc">Create New Label</string>
    <string name="action_create">Create</string>
    <string name="close_content_desc">Close menu</string>
    <string name="create_new_label_hint">New Label Name</string>
    <string name="loading_task">Loading Task…</string>
    <string name="action_convert">Convert to Note</string>
    <string name="checkbox_content_desc">Empty Checkbox</string>
    <string name="empty_label">No jottings with this label at the moment</string>
    <string name="add_label_to_jot">Categorize your jottings with labels to better organize your notes and tasks</string>
    <string name="empty_label_content_desc">Empty label</string>
    <string name="toggle_completed_tasks">Toggle Completed Tasks</string>
    <string name="hide_completed_tasks">Hide Completed Tasks</string>
    <string name="show_completed_tasks">Show Completed Tasks</string>
</resources>
