<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/save_btn"
          android:title="@string/action_save"
          app:showAsAction="always"
          android:icon="@drawable/ic_save" />

    <item android:id="@+id/pin_btn"
        android:title="@string/action_pin"
        app:showAsAction="always"
        android:icon="@drawable/ic_pin"/>

    <item android:id="@+id/share_btn"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share" />

    <item android:id="@+id/labels_btn"
        android:title="@string/action_labels"
        app:showAsAction="always"
        android:icon="@drawable/label_white_outline" />

    <item android:id="@+id/delete_btn"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        tools:ignore="AlwaysShowAction" />
</menu>
