<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/pin_btn"
        android:title="@string/action_pin"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_pin"/>

    <item android:id="@+id/share_btn"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share" />

    <item android:id="@+id/labels_btn"
        android:title="@string/action_labels"
        app:showAsAction="always"
        android:icon="@drawable/label_white_outline" />

    <item android:id="@+id/delete_btn"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"/>

</menu>
