<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <fragment
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.boruminc.borumjot.android.AppBarFragment"
        tools:layout="@layout/appbar_appname_fragment" />

    <Button
        android:id="@+id/forum_btn"
        android:text="@string/action_forum"
        style="@style/TextButtonListItem"
        android:layout_below="@id/appbar"
        android:onClick="onForumClick"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contact_btn"
        android:text="@string/contact_title"
        style="@style/TextButtonListItem"
        android:layout_below="@id/forum_btn"
        app:icon="@drawable/mail"
        android:onClick="onContactClick"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/twitter_btn"
        android:text="@string/twitter_title"
        style="@style/TextButtonListItem"
        android:layout_below="@id/contact_btn"
        app:icon="@drawable/twitter"
        android:onClick="onTwitterClick"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_hunt_btn"
        android:text="@string/product_hunt_title"
        style="@style/TextButtonListItem"
        android:layout_below="@id/twitter_btn"
        app:icon="@drawable/product_hunt"
        android:onClick="onProductHuntClick"
    />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy_policy_btn"
        android:text="@string/privacy_policy_title"
        style="@style/TextButtonListItem"
        android:layout_below="@id/product_hunt_btn"
        app:icon="@drawable/privacy_policy_icon"
        android:onClick="onPrivacyPolicyClick"
        />

    <TextView
        android:id="@+id/copyright_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_notice"
        android:layout_marginTop="@dimen/action_btn_margin"
        android:layout_marginEnd="@dimen/action_btn_margin"
        android:layout_marginRight="@dimen/action_btn_margin"
        android:layout_marginStart="@dimen/action_btn_margin"
        android:layout_marginLeft="@dimen/action_btn_margin"
        android:layout_above="@id/version_number"
        />

    <TextView
        android:id="@+id/version_number"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_gravity="fill_horizontal"
        android:text="@string/version_name"
        android:layout_margin="@dimen/action_btn_margin"
        />
</RelativeLayout>