<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/close_content_desc"
                    android:onClick="onExitCreateLabelClick"
                    android:src="@drawable/ic_close_black_24dp"
                    android:tint="?attr/colorOnPrimarySurface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action_new_label"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/action_create"
                    android:src="@drawable/ic_check"
                    android:onClick="onConfirmLabelClick"
                    android:tint="?attr/colorOnPrimarySurface" />
            </TableRow>

        </TableLayout>

   </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_new_label_hint"
        app:startIconDrawable="@drawable/ic_label"
        app:startIconContentDescription="@string/new_label_content_desc"
        app:helperTextEnabled="true"
        app:helperText="Labels let you add keywords to jottings, making them easier to find and browse"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
