<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpAndFeedbackActivity">
    <fragment
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.boruminc.borumjot.android.AppNameAppBarFragment"
        tools:layout="@layout/appbar_appname_fragment" />

    <LinearLayout
        android:id="@+id/rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/Widget.AppCompat.RatingBar">

        <ImageButton android:id="@+id/rating_star1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/btn_star"
            android:background="#00ffffff"
            android:contentDescription="@string/rating_contentdesc" />

        <ImageButton android:id="@+id/rating_star2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/btn_star"
            android:background="#00ffffff"
            android:contentDescription="@string/rating_contentdesc" />
        <ImageButton android:id="@+id/rating_star3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/btn_star"
            android:background="#00ffffff"
            android:contentDescription="@string/rating_contentdesc" />
        <ImageButton android:id="@+id/rating_star4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/btn_star"
            android:background="#00ffffff"
            android:contentDescription="@string/rating_contentdesc" />
        <ImageButton android:id="@+id/rating_star5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/btn_star"
            android:background="#00ffffff"
            android:contentDescription="@string/rating_contentdesc" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_report_bug"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_donate"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_forum"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        style="@style/ContactBar">

        <TextView
            android:text="@string/contact_title"
            style="@style/ContactBarLabel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/ContactBarItemButton">
            <ImageButton
                android:id="@+id/message_button"
                android:src="@android:drawable/stat_sys_phone_call_forward"
                style="@style/ContactBarItemButton" />

            <ImageButton
                android:id="@+id/call_button"
                android:src="@android:drawable/stat_sys_phone_call"
                android:contentDescription="@string/call_contentdesc"
                style="@style/ContactBarItemButton" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>