<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NoteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/top_section"
        android:background="?attr/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/action_btn_margin"
            android:id="@+id/action_bar">
            <Button
                android:id="@+id/save_btn"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/action_save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="onSaveClick"
                />

            <Button
                android:id="@+id/nav_to_share_btn"
                android:layout_height="wrap_content"
                android:text="@string/action_share"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/save_btn"
                style="@style/HeaderButton" />
            <ImageButton
                android:id="@+id/delete_note_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/nav_to_share_btn"
                android:layout_centerVertical="true"
                android:text="@string/action_delete"
                android:src="@drawable/ic_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/cherryRasboraPrimary"
                android:contentDescription="@string/delete_content_desc"
                android:layout_toEndOf="@id/nav_to_share_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <fragment
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.boruminc.borumjot.android.AppBarFragment"
            tools:layout="@layout/appbar_appname_fragment" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_section">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.boruminc.borumjot.android.customviews.EditTextV2
                android:id="@+id/note_content"
                android:inputType="text|textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints=""
                android:hint="@string/note_hint"
                style="@style/NoteArea"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>