<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boruminc.borumjot.android.ChangeSignInActivity">

    <fragment
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/appbar_appname_fragment"
        android:name="com.boruminc.borumjot.android.AppBarFragment" />
    
    <EditText
        android:id="@+id/email_field"
        android:layout_below="@id/appbar"
        android:hint="@string/prompt_email"
        android:autofillHints="@string/prompt_email"
        android:inputType="textEmailAddress"
        style="@style/ChangeSignInEditText" />

    <EditText
        android:id="@+id/password_field"
        android:layout_below="@id/email_field"
        android:hint="@string/prompt_password"
        android:autofillHints="@string/prompt_password"
        android:inputType="textPassword"
        style="@style/ChangeSignInEditText" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_below="@id/password_field"
        android:hint="@string/prompt_confirm_new_password"
        android:autofillHints="@string/prompt_confirm_new_password"
        android:inputType="textPassword"
        style="@style/ChangeSignInEditText" />

    <Button
        android:id="@id/submit_change_sign_in_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:text="@string/action_change_sign_in"
        android:onClick="onChangeSignInClick"
        style="@style/OneSelectButtonGradient" />

    <TextView
        android:id="@+id/all_borum_products_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit_change_sign_in_btn"
        android:text="@string/all_borum_products_msg"
        android:textSize="@dimen/formcontrol_txtSize"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/all_borum_products_txt"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>