<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity">

    <fragment
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.boruminc.borumjot.android.AppBarFragment"
        tools:layout="@layout/appbar_appname_fragment"/>

    <fragment
        android:id="@+id/jotting_options_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.boruminc.borumjot.android.JottingOptionsFragment"
        tools:layout="@layout/jotting_options_fragment"
        />

    <fragment
        android:id="@+id/labels_list_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:name="com.boruminc.borumjot.android.labels.LabelsList"
        tools:layout="@layout/labels_list"
        />

    <LinearLayout
        android:id="@+id/jot_filter_btns_layout"
        android:layout_below="@id/labels_list_frag"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/home_notes_toggle"
            android:text="@string/notes_title"
            android:onClick="onToggleNotesFilter"
            android:tag="on"
            style="@style/FilterButton" />
        <Button
            android:id="@+id/home_tasks_toggle"
            android:text="@string/tasks_title"
            android:onClick="onToggleTasksFilter"
            style="@style/FilterButton"
            android:tag="on" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshable_jottings_list"
        android:layout_below="@id/jot_filter_btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ExpandableListView
            android:id="@+id/home_jottings_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/jot_filter_btns_layout"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_jotting_btn_home"
        android:src="@drawable/ic_create"
        android:onClick="onFloatingActionBtnClick"
        android:contentDescription="@string/new_task_content_desc"
        style="@style/PlusFloatingActionBtn"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_label_btn"
        android:layout_width="wrap_content"
        app:icon="@drawable/ic_add_black_24dp"
        android:onClick="onAddLabelFABClick"
        android:text="@string/action_new_label"
        android:contentDescription="@string/new_label_content_desc"
        style="@style/PlusFloatingActionBtn"
        android:visibility="gone" />
</RelativeLayout>